# bytebite

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
bytebite/: __init__.py  __main__.py  cli.py  container.py  custom.py  diff.py  entropy.py  explain.py  fields.py  find.py  header.py  identify.py  peek.py  registry.py  render.py  signatures.py
tests/: test_cli.py  test_cli_container.py  test_cli_diff.py  test_cli_doctor.py  test_cli_entropy.py  test_cli_header.py  test_cli_identify.py  test_cli_json.py  test_cli_list_formats.py  test_cli_peek.py  test_container.py  test_custom.py  test_explain.py  test_fields.py  test_find.py  test_identify.py  test_peek.py  test_peek_fields.py  test_render_json.py  test_signatures.py
