[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bytebite"
version = "0.1.0"
description = "A pocket detective for mystery files: identify a binary and peek at its annotated header."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "rwrife" }]
keywords = ["cli", "hex", "magic-bytes", "file-identification", "binary"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rwrife/bytebite"
Repository = "https://github.com/rwrife/bytebite"
Issues = "https://github.com/rwrife/bytebite/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
bytebite = "bytebite.cli:main"

[tool.setuptools]
packages = ["bytebite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
